--- a/shippingcity/res/layout/activity_personl_center_dialog.xml
+++ b/shippingcity/res/layout/activity_personl_center_dialog.xml
@@ -56,6 +56,7 @@
 	    android:textColor="@color/white"
 	    />
 	<TextView 
+	    android:id="@+id/txt_my_attention_pallet"
 	    android:layout_width="fill_parent"
 	    android:layout_height="wrap_content"
 	    android:drawableLeft="@drawable/personal_center_concerned_about_icon"
