--- a/shippingcity/res/layout/activity_pallet_detail.xml
+++ b/shippingcity/res/layout/activity_pallet_detail.xml
@@ -37,7 +37,6 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="10dp"
-                    android:text="海运"
                     android:textColor="@color/my_quote_item_tination"
                     android:textSize="@dimen/myQuote_item_tination_size" />
             </LinearLayout>
@@ -67,7 +66,6 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="@dimen/xlist_marginl"
-                    android:text="HONGKONG"
                     android:textColor="@color/my_quote_item_tination"
                     android:textSize="@dimen/myQuote_item_tination_size" />
             </LinearLayout>
@@ -97,7 +95,6 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="@dimen/xlist_marginl"
-                    android:text="ALEXANDRIA"
                     android:textColor="@color/my_quote_item_tination"
                     android:textSize="@dimen/myQuote_item_tination_size" />
             </LinearLayout>
@@ -145,7 +142,6 @@
                             android:id="@+id/tv_goBeginTime"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="2015/03/06"
                             android:textSize="14sp" />
 
                         <TextView
@@ -159,7 +155,6 @@
                             android:id="@+id/tv_goEndTime"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="2015/03/06"
                             android:textSize="14sp" />
                     </LinearLayout>
                 </LinearLayout>
@@ -180,17 +175,16 @@
                 android:gravity="center_vertical" >
 
                 <ImageView
+                    android:id="@+id/iv_type"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="17dp"
-                    android:src="@drawable/ic_launcher" />
+                    android:layout_marginLeft="17dp"/>
 
                 <TextView
                     android:id="@+id/tv_boxType"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="@dimen/xlist_marginl"
-                    android:text="箱型;20GP;数量2箱;40GP;数量4箱40HQ,数量5箱"
                     android:textSize="@dimen/myQuote_item_tination_size" 
                     />
             </LinearLayout>
@@ -278,8 +272,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="@dimen/xlist_marginl"
-                    android:text="箱型;20GP;数量2箱;40GP;数量4箱40HQ,数量5箱" 
-                     android:textSize="14sp" 
+                    android:textSize="14sp" 
                     
                     />
             </LinearLayout>
@@ -301,7 +294,6 @@
                 android:gravity="center_vertical" >
 
                 <TextView
-                    android:id="@+id/textView2"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/quotation_deadline" 
@@ -312,7 +304,6 @@
                     android:id="@+id/tv_offerEndTime"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="11-12 8:00"
                     android:textSize="14sp" 
                      />
             </LinearLayout>
