--- a/shippingcity/res/layout/item_pallet_sea_transport.xml
+++ b/shippingcity/res/layout/item_pallet_sea_transport.xml
@@ -41,10 +41,8 @@
                 android:id="@+id/tv_offer"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textColor="@color/pallet_offer_text"
                 android:gravity="center"
-                android:textSize="16sp"
-                android:background="@drawable/btn_offer_selector" />
+                android:textSize="16sp"/>
         </LinearLayout>
 
         <ImageView
