--- a/shippingcity/res/layout/item_update_dialog.xml
+++ b/shippingcity/res/layout/item_update_dialog.xml
@@ -14,13 +14,13 @@
 	    android:textSize="18sp"
 	    />
 	<TextView 
+	    android:id="@+id/txt_new_version"
 	    android:layout_width="fill_parent"
 	    android:layout_height="wrap_content"
 	    android:paddingLeft="50dp"
 	    android:textColor="#4C4C4C"
 	    android:gravity="center_vertical"
 	    android:textSize="14sp"
-	    android:text="新版本1.0新功能"
 	    />
 	<TextView 
 	    android:id="@+id/txt_update_content"
@@ -31,7 +31,6 @@
 	    android:paddingLeft="50dp"
 	    android:textSize="14sp"
 	    android:gravity="center_vertical"
-	    android:text="1、新加货代反馈功能\n2、新加实时反馈货盘交易情况\n3、新加在线反馈功能"
 	    />
 	<View 
 	    android:layout_width="fill_parent"
