--- a/shippingcity/res/layout/activity_personal_invite_friend.xml
+++ b/shippingcity/res/layout/activity_personal_invite_friend.xml
@@ -5,7 +5,12 @@
     android:background="@color/white"
     android:padding="20dp"
     android:orientation="vertical" >
-    
+    <LinearLayout 
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:layout_weight="1"
+        >
 	<TextView 
 	    android:layout_width="wrap_content"
 	    android:layout_height="wrap_content"
@@ -48,6 +53,7 @@
 	    android:minHeight="50dp"
 	    android:background="@drawable/btn_orange_selector"
 	    android:textColor="@color/white"
+	    android:textSize="16sp"
 	    android:layout_marginTop="42dp"
 	    />
 	<TextView 
@@ -55,10 +61,11 @@
 	    android:layout_height="wrap_content"
 	    android:text="推荐后，系统会以短信形式向您的好友发送航运城APP的下载链接哦!"
 	    android:textColor="#C3C0C0"
-	    android:textSize="12sp"
+	    android:textSize="14sp"
 	    android:gravity="center"
 	    android:layout_marginTop="17dp"
 	    />
+	</LinearLayout>
 	<TextView 
 	    android:layout_width="wrap_content"
 	    android:layout_height="wrap_content"
