--- a/shippingcity/res/layout/activity_personal_integral_rule.xml
+++ b/shippingcity/res/layout/activity_personal_integral_rule.xml
@@ -38,8 +38,14 @@
                 app:valueText="可获得积分"
                 android:layout_marginLeft="15dp"
                 android:layout_marginRight="15dp"
+                app:nameSize="16sp"
+                app:valueSize="16sp"
                 />
-            <!-- <include layout="@layout/item_integral_rule"/> -->
+            <View 
+                android:layout_width="fill_parent"
+                android:layout_height="1dp"
+                android:background="#E8EDEF"
+                />
             <com.ateam.shippingcity.widget.TextViewPair
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
@@ -50,6 +56,8 @@
                 app:valueColor="#FFAF4C"
                 android:layout_marginLeft="15dp"
                 android:layout_marginRight="50dp"
+                app:nameSize="16sp"
+                app:valueSize="16sp"
                 />
             <View 
                 android:layout_width="fill_parent"
@@ -66,6 +74,8 @@
                 app:valueColor="#FFAF4C"
                 android:layout_marginLeft="15dp"
                 android:layout_marginRight="50dp"
+                app:nameSize="16sp"
+                app:valueSize="16sp"
                 />
             <View 
                 android:layout_width="fill_parent"
@@ -82,6 +92,8 @@
                 app:valueColor="#FFAF4C"
                 android:layout_marginLeft="15dp"
                 android:layout_marginRight="50dp"
+                app:nameSize="16sp"
+                app:valueSize="16sp"
                 />
             <View 
                 android:layout_width="fill_parent"
@@ -98,6 +110,8 @@
                 app:valueColor="#FFAF4C"
                 android:layout_marginLeft="15dp"
                 android:layout_marginRight="50dp"
+                app:nameSize="16sp"
+                app:valueSize="16sp"
                 />
             <View 
                 android:layout_width="fill_parent"
@@ -114,6 +128,8 @@
                 app:valueColor="#FFAF4C"
                 android:layout_marginLeft="15dp"
                 android:layout_marginRight="15dp"
+                app:nameSize="16sp"
+                app:valueSize="16sp"
                 />
             <View 
                 android:layout_width="fill_parent"
@@ -130,6 +146,8 @@
                 app:valueColor="#FFAF4C"
                 android:layout_marginLeft="15dp"
                 android:layout_marginRight="15dp"
+                app:nameSize="16sp"
+                app:valueSize="16sp"
                 />
             <View 
                 android:layout_width="fill_parent"
@@ -146,6 +164,8 @@
                 app:valueColor="#FFAF4C"
                 android:layout_marginLeft="15dp"
                 android:layout_marginRight="15dp"
+                app:nameSize="16sp"
+                app:valueSize="16sp"
                 />
             <View 
                 android:layout_width="fill_parent"
@@ -163,6 +183,8 @@
                 app:valueColor="#FFAF4C"
                 android:layout_marginLeft="15dp"
                 android:layout_marginRight="15dp"
+                app:nameSize="16sp"
+                app:valueSize="16sp"
                 />
         </LinearLayout>
     </LinearLayout>
